core: replace easymock with mockito